@@ -8,7 +8,7 @@
 	<packaging>pom</packaging>
 
 	<properties>
-		<junit.jupiter.version>5.3.1</junit.jupiter.version>
+		<junit.jupiter.version>5.5.2</junit.jupiter.version>
 		<testcontainers.version>1.12.4</testcontainers.version>
 		<maven.compiler.source>1.8</maven.compiler.source>
 		<maven.compiler.target>1.8</maven.compiler.target>
@@ -28,7 +28,6 @@
 				<version>2.22.2</version>
 				<configuration>
 					<useSystemClassLoader>false</useSystemClassLoader>
-					<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
@@ -55,7 +54,7 @@
 			<plugin>
 				<groupId>com.google.cloud.tools</groupId>
 				<artifactId>jib-maven-plugin</artifactId>
-				<version>1.5.1</version>
+				<version>1.8.0</version>
 				<configuration>
 					<skip>true</skip>
 					<container>
@@ -100,7 +99,7 @@
 		<dependency>
 			<groupId>org.mockito</groupId>
 			<artifactId>mockito-core</artifactId>
-			<version>2.23.0</version>
+			<version>2.28.2</version>
 			<scope>test</scope>
 		</dependency>
 
